k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-s3-pvc
  namespace: springboot-s3-pvc
  labels:
    app: springboot-s3-pvc
    app.kubernetes.io/name: springboot-s3-pvc
    app.kubernetes.io/component: backend
spec:
  selector:
    app: springboot-s3-pvc
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
