k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: springboot-s3-pvc
  namespace: springboot-s3-pvc
  labels:
    app: springboot-s3-pvc
    app.kubernetes.io/name: springboot-s3-pvc
    app.kubernetes.io/component: backend
spec:
  to:
    kind: Service
    name: springboot-s3-pvc
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
